force-app/main/default/objects/A__c/fields/abc__c.field-meta.xml
<CustomField>
    <fullName>abc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B</label>
    <referenceTo>B__c</referenceTo>
    <relationshipLabel>As</relationshipLabel>
    <relationshipName>As</relationshipName>
    <type>Lookup</type>
</CustomField>