force-app/main/default/objects/A__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chile sales</fullName>
            </value>
            <value>
                <fullName>Argentia sales</fullName>
            </value>
            <value>
                <fullName>Brazil sales</fullName>
            </value>
            <value>
                <fullName>Paris sales</fullName>
            </value>
            <value>
                <fullName>New york sales</fullName>
            </value>
            <value>
                <fullName>adalaide sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>