force-app/main/default/objects/A__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semi- Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>quarterly</fullName>
            </value>
            <value>
                <fullName>Semi- Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>