force-app/main/default/objects/A__c/fields/Hetvi__c.field-meta.xml
<CustomField>
    <fullName>Hetvi__c</fullName>
    <label>Hetvi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>