force-app/main/default/objects/A__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raj</fullName>
            </value>
            <value>
                <fullName>Guj</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>