force-app/main/default/objects/A__c/validationRules/Number_validate.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_validate</fullName>
    <active>true</active>
    <errorConditionFormula>Rent__c &gt; 11</errorConditionFormula>
    <errorMessage>Please enter the value less than 11</errorMessage>
</ValidationRule>